feat(perf): migrate to Java 25 virtual threads for indexing, search, and maintenance.