@@ -36,7 +36,7 @@ public class AdvancedThreadSafetyTest {
     void setUp() {
         blockchain = new Blockchain();
         blockchain.clearAndReinitialize();
-        executorService = Executors.newFixedThreadPool(THREAD_COUNT);
+        executorService = Executors.newVirtualThreadPerTaskExecutor(); // Java 25 Virtual Threads;
 
         // RBAC FIX (v1.0.6): Create bootstrap admin for tests
         testBootstrapKeyPair = CryptoUtil.generateKeyPair();
