@@ -682,7 +682,7 @@ public class ExhaustiveOffChainSearchTest {
         // Concurrent search testing
         int threadCount = 10;
         int searchesPerThread = 3;
-        ExecutorService executor = Executors.newFixedThreadPool(threadCount);
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor(); // Java 25 Virtual Threads;
         CountDownLatch latch = new CountDownLatch(threadCount);
         AtomicInteger successCount = new AtomicInteger(0);
         AtomicInteger errorCount = new AtomicInteger(0);
